Adjust media queries on mobile, begin fixing mobile horizontal scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ html {
 }
 
 .app-wrapper {
-  width: fit-content;
-  /* outline: 2px solid rgba(33, 221, 61, 0.819); */
+  /* width: fit-content; */
+  width: 100vw;
+  outline: 2px solid rgba(33, 221, 61, 0.819);
 
   .project-components-wrapper {
     display: flex;
